widget/windows/WinIMEHandler.h
@@ -30,8 +30,16 @@ struct MSGResult;
  */
 class IMEHandler final
 {
-public:
+private:
+  /**
+   * Initialize() initializes both TSF modules and IMM modules.  Some TIPs
+   * may require a normal window (i.e., not message window) belonging to
+   * this process.  Therefore, this is called immediately after first normal
+   * window is created.
+   */
   static void Initialize();
+
+public:
   static void Terminate();
 
   /**
